Merged in releases/1.10.0-rc (pull request #6)
Upgrade to Java 21

* Upgrade to Java 21

* Merge branch 'develop' into releases/1.10.0-rc


Approved-by: Bin Zhang